--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,28 +1,34 @@
 body {
     background-color: #00FFFF;
     color: #333; 
+    text-align: center;
     font-family: Arial, sans-serif;
   }
   
   h1, h2, h3 {
     font-family: 'Courier New', cursive;
+    text-align: center;
   }
   nav ul {
     list-style-type: none;
     padding: 0;
+    text-align: center;
   }
   
   nav ul li {
     display: inline;
     margin-right: 15px;
+    text-align: center;
   }
   
   footer ul {
     list-style-type: none;
     padding: 0;
+    text-align: center;
   }
   
   footer ul li {
     display: inline;
     margin-right: 15px;
+    text-align: center;
   }
