--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,34 +1,53 @@
 body {
-    background-color: #00FFFF;
-    color: #333; 
-    text-align: center;
-    font-family: Arial, sans-serif;
+  background-color: #00FFFF;
+  color: #333;
+  text-align: center;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1, h2, h3 {
+  font-family: 'Courier New', cursive;
+  text-align: center;
+}
+
+nav ul, footer ul {
+  list-style-type: none;
+  padding: 0;
+  text-align: center;
+}
+
+nav ul li, footer ul li {
+  display: inline;
+  margin-right: 15px;
+}
+
+/* Layout Foundation for All Screens */
+main {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* MEDIA QUERIES */
+
+/* Tablet Devices (601px–980px) */
+@media screen and (min-width: 601px) and (max-width: 980px) {
+  body {
+    background-color: #e0f7fa; /* subtle change if you want */
   }
-  
-  h1, h2, h3 {
-    font-family: 'Courier New', cursive;
-    text-align: center;
+}
+
+/* Mobile Devices (370px–600px) */
+@media screen and (min-width: 370px) and (max-width: 600px) {
+  body {
+    background-color: #ccf5f5; /* another slight variation */
+    font-size: 16px;
   }
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-    text-align: center;
+
+  nav ul li, footer ul li {
+    display: block;
+    margin: 8px 0;
   }
-  
-  nav ul li {
-    display: inline;
-    margin-right: 15px;
-    text-align: center;
-  }
-  
-  footer ul {
-    list-style-type: none;
-    padding: 0;
-    text-align: center;
-  }
-  
-  footer ul li {
-    display: inline;
-    margin-right: 15px;
-    text-align: center;
-  }
+}
